ops/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: frontend
        image: mernk8s.azurecr.io/mern-frontend:v1
        ports:
        - containerPort: 5050
