ops/backend.yaml
# k8s/20-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: mern
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: mernk8s.azurecr.io/mern-backend:v1
          ports:
            - containerPort: 5050
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: mern
spec:
  selector:
    app: backend
  ports:
    - name: http
      port: 5050
      targetPort: 5050
  type: ClusterIP
