ops/database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: mern
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:6
          ports:
            - containerPort: 27017
          args: ["--bind_ip_all"]
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: mern
spec:
  selector:
    app: mongodb
  ports:
    - name: mongo
      port: 27017
      targetPort: 27017
  type: ClusterIP
